# usage

./: .env.template  .gitignore  CLAUDE.md  README.md  config.example.yml  pyproject.toml
docs/: authoring-a-source.md
docs/plans/: 2026-07-15-usage-v1.md
docs/specs/: 2026-07-15-usage-design.md
src/usage/: __init__.py  cli.py  config.py  core.py  models.py
src/usage/render/: __init__.py  json.py  table.py  text.py  tui.py
src/usage/sources/: __init__.py  _template.py  claude_code.py  demo.py  github.py  hetzner.py
tests/: conftest.py  test_config.py  test_core.py  test_discovery.py  test_models.py  test_render_json.py  test_render_text.py  test_render_tui.py
tests/fixtures/: claude_usage.txt  github_billing.json  github_usage_summary.json  hetzner_pricing.json  hetzner_servers.json  hetzner_servers_p1.json  hetzner_servers_p2.json
tests/sources/: test_claude_code.py  test_github.py  test_hetzner.py
