[project]
name = "usage"
version = "0.1.0"
description = "Fetch usage, quota, and billing from cloud and AI sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
]

[project.scripts]
usage = "usage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usage"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
